# Godot-Game-Framework

./: .gitignore  ASSET_STORE_DESCRIPTION.md  CHANGELOG_1.0.0_to_1.0.3.md  CMakeLists.txt  FoundationGameFramework.gdextension  FoundationGameFramework.gdextension.uid  README.md  extension.manifest.json  heathen_manifest.json  plugin.cfg
.github/workflows/: build.yml
editor/: FoundationGameFrameworkEditorPlugin.gd  FoundationGameFrameworkEditorPlugin.gd.uid  SubsystemAutoloadSetup.gd  SubsystemAutoloadSetup.gd.uid  SubsystemBootAutoload.gd  SubsystemBootAutoload.gd.uid  dependency_fetcher.gd  dependency_manifest.gd
src/private/: SubsystemManagerBridge.cpp  SubsystemTicker.cpp  register_types.cpp
src/private/editor/: SubsystemsDock.cpp  SubsystemsSettingsTab.cpp
src/public/: SubsystemManagerBridge.h  SubsystemTicker.h  register_types.h
src/public/editor/: SubsystemsDock.h  SubsystemsSettingsTab.h
